# vidl-player

./: Cargo.toml  README.md
src/: data.rs  lib.rs  main.rs  winsys.rs
src/util/: mod.rs
