[package]
name = "vidlplayer"
version = "0.1.0"
authors = ["dbr <dbr.onix@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "0.9"
imgui-glow-renderer = "0.9"
imgui-winit-support = "0.9"
winit = {version = "0.27", features = ["x11"]}
anyhow = "1.0"
glow = "0.10"
glutin = "0.29"
